--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
    <h1>Hello, world!</h1>
+   <div class="block">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
    <script src="/script.js"></script>
 </body>
 </html>
