--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
    <h1>Hello, world!</h1>
    <div class="block">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
-   <script src="/script.js"></script>
+   <!-- <script src="/script.js"></script> -->
+   <script src="/cycle.js"></script>
 </body>
 </html>
